--- a/PhysPy-wk11_2015S.ipynb
+++ b/PhysPy-wk11_2015S.ipynb
@@ -892,6 +892,50 @@
     "## - Return the new sound array.\n",
     "## - Test it on Barry White segment."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def equalizer(sample_rate, sound, wt1 = None, wt2 = None, wt3 = None, vol = 1.):\n",
+    "    import pdb\n",
+    "    if wt1 == None or wt2 == None or wt3 == None:\n",
+    "        return sound \n",
+    "    freq = np.fft.fftfreq(sound.shape[0], d = 1./sample_rate)\n",
+    "    ft = np.fft.fft(np.float64(sound))\n",
+    "    #pdb.set_trace()\n",
+    "    filt1 = np.abs(freq) < 500. #boolean array with same length as freq\n",
+    "    filt2 = (np.abs(freq) > 500) * (np.abs(freq) < 1000)\n",
+    "    filt3 = np.abs(freq) > 1000\n",
+    "    sound1 = signal_rec(ft, filt1) #gets rid of frequencies higher than 500\n",
+    "    sound2 = signal_rec(ft, filt2)\n",
+    "    sound3 = signal_rec(ft, filt3)\n",
+    "\n",
+    "    A = 1 / float(np.sqrt(wt1**2. + wt2**2. + wt3**2.))\n",
+    "    super_sound = A * (wt1*sound1 + wt2*sound2 + wt3*sound3)\n",
+    "    \n",
+    "    return super_sound\n",
+    "\n",
+    "start_time = 0.\n",
+    "end_time = 2.\n",
+    "\n",
+    "ample_rate, time_pts, shortBW = get_music(\"BarryWhite.wav\", start_time, end_time)\n",
+    "mod_sound = equalizer(44100, shortBW, wt1 = 1., wt2 = 22., wt3 = 333.)\n",
+    "#mod_sound = equalizer(44100, shortBW)\n",
+    "# fig = plt.figure(figsize = (10, 8))\n",
+    "# # Note here I'm passing fig as an argument -- so that the original array and the recovered array can be \n",
+    "# # plotted on the smae figure.\n",
+    "# plotsound(time_pts, shortBW, fig = fig, s_lim = 3000, plot_style = 'b-')\n",
+    "# plotsound(time_pts, mod_sound, fig = fig, s_lim = 3000, plot_style = 'gx')\n",
+    "# plt.show()\n",
+    "\n",
+    "playsound(mod_sound, vol = 1.0)    \n",
+    "#playsound(shortBW, vol = 1.0)"
+   ]
   }
  ],
  "metadata": {
