--- a/song_py_draft.ipynb
+++ b/song_py_draft.ipynb
@@ -2,18 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1-e1ccf76e9e1f>, line 32)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-e1ccf76e9e1f>\"\u001b[0;36m, line \u001b[0;32m32\u001b[0m\n\u001b[0;31m    def__init__(self, ):\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([   0,   64,  128, ..., -128,  -64,    0], dtype=int16)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -21,64 +23,93 @@
     "\n",
     "Tone \n",
     "\n",
-    "f - frequency\n",
-    "dur - duration\n",
-    "sr - sampling rate\n",
-    "signal - a numpy array that stores the tone plus the overtones, if any.\n",
-    "orig_signal - a numpy array that stores the simple one-frequency tone with frequency f1(i.e., no overtones). \n",
-    "overtones - a dictionary that stores the overtones.  Each key should be a number of multiples of f1 and the corresponding value should be an overtone numpy array. \n",
-    "OT_num - the number of overtones present.  This number should increase by one each time a\n",
-    "new overtone is created.\n",
-    "\n",
-    "get_tone() - generates a tone at the given fundamental frequency, f1. \n",
-    "It should take f (the frequency f1) and duration  as arguments. \n",
-    "You can either treat these two as positional or keyword arguments.  \n",
-    "It should also have a keyword argument play_sound, with a default\n",
-    "value of False.  \n",
-    "If it’s set to be True, when the method get_tone() is invoked,\n",
-    "it should play the tone generated.  Set the amplitude to be 210, \n",
-    "to avoid saturation.  You can control the volume in other ways; \n",
-    "see the method playsound() below.  The method returns the numpy\n",
-    "array that is the tone generated.\n",
-    "\n",
-    "get_overtone()- generates an overtone that has a frequency that \n",
-    "is multi×f1, where multi is a an argument for this method.  \n",
-    "Just as for get_tone(), It should also have a keyword argument play_sound.  It returns None.\n",
     "'''\n",
     "\n",
     "from scipy.io.wavfile import write\n",
     "import os\n",
+    "import numpy as np\n",
     "\n",
     "class Tone:\n",
     "    \n",
-    "    def __init__(self, f, dur, sr):\n",
+    "    def __init__(self):\n",
     "        self.f = 0\n",
     "        self.dur = 0\n",
-    "        self.sr = 0\n",
+    "        self.sample_rate = 44100\n",
     "        self.signal = 0\n",
     "        self.orig_signal = 0\n",
     "        self.overtones = {}\n",
     "        self.ot_num = 0\n",
     "    \n",
-    "    def playsound(sample_rate, sound):\n",
-    "        write('tmp.wav', sample_rate, sound)\n",
-    "        os.system(\"afplay tmp.wav\") \n",
-    "        os.system(\"rm tmp.wav\") \n",
-    "        return\n",
-    "    \n",
-    "    def get_tone(self, f, duration, play_sound = False):\n",
+    "    def get_tone(self, freq, duration, play_sound = False):\n",
+    "        self.f = freq\n",
+    "        self.dur = duration\n",
     "        amp = 2**10\n",
-    "        time_pts = np.linspace(0, duration, duration*sample_rate)\n",
-    "        tone_data = np.int16(amp*np.sin(np.pi*2*f*time_pts))\n",
+    "        time_pts = np.linspace(0, self.dur, self.dur*self.sample_rate)\n",
+    "        tone_data = np.int16(amp*np.sin(np.pi*2*self.f*time_pts))\n",
     "        if play_sound == True:\n",
-    "            playsound(sr, tone_data)\n",
+    "            playsound(sample_rate, tone_data)\n",
     "        return tone_data\n",
     "    \n",
     "    def get_overtone(self, multi, play_sound = False):\n",
-    "        tone_data = np.int16(amp*np.sin(np.pi*2*multi*f*time_pts))\n",
+    "        time_pts = np.linspace(0, self.dur, self.dur*self.sample_rate)\n",
+    "        overtone_data = np.int16(amp*np.sin(np.pi*2*multi*f*time_pts))\n",
+    "        self.overtones[multi*self.f] = tone_data\n",
     "        if play_sound == True:\n",
-    "            playsound(sr, tone_data)\n",
+    "            playsound(self.sample_rate, tone_data)\n",
+    "        self.ot_num += 1\n",
     "        return None \n",
+    "\n",
+    "    #not satisfied\n",
+    "#     def comb_tones(self, weight_opt = False):\n",
+    "#         weights = np.ones(self.ot_num +1)\n",
+    "#         if weight_opt == True:\n",
+    "#             for i in range(self.ot_num + 2):\n",
+    "#                 weights[i] = raw_input('Input the weight of the tone')\n",
+    "\n",
+    "#         freq = np.fft.fftfreq(sound.shape[0], d = 1./sample_rate)\n",
+    "#         ft = np.fft.fft(np.float64(sound))\n",
+    "#         filt1 = np.abs(freq) < 500. #boolean array with same length as freq\n",
+    "#         filt2 = (np.abs(freq) > 500) * (np.abs(freq) < 1000)\n",
+    "#         filt3 = np.abs(freq) > 1000\n",
+    "#         sound1 = signal_rec(ft, filt1) #gets rid of frequencies higher than 500\n",
+    "#         sound2 = signal_rec(ft, filt2)\n",
+    "#         sound3 = signal_rec(ft, filt3)\n",
+    "\n",
+    "#         A = 1 / float(np.sqrt(wt1**2. + wt2**2. + wt3**2.))\n",
+    "#         super_sound = A * (wt1*sound1 + wt2*sound2 + wt3*sound3)\n",
+    "#         return super_sound\n",
+    "\n",
+    "#     def playsound(sample_rate = 44100, sound):\n",
+    "#         write('tmp.wav', sample_rate, sound)\n",
+    "#         os.system(\"afplay tmp.wav\") \n",
+    "#         os.system(\"rm tmp.wav\") \n",
+    "#         return\n",
+    "    \n",
+    "    def plot_fourier(signal,sample_rate = 44100, freq_lim = 2000., amp_lim = 1e7):\n",
+    "        ft = np.fft.fft(np.float64(signal))\n",
+    "        freq = np.fft.fftfreq(signal.shape[-1], d = 1./sample_rate)\n",
+    "        plt.figure()\n",
+    "        plt.title('Real')\n",
+    "        plt.plot(freq, ft.real, 'b-')\n",
+    "        plt.xlim([-freq_lim, freq_lim])\n",
+    "        plt.figure()\n",
+    "        plt.title('Imaginary')\n",
+    "        plt.plot(freq, ft.imag, 'g-')\n",
+    "        plt.ylim([-amp_lim, amp_lim])\n",
+    "        plt.show()\n",
+    "        #return ft, freq\n",
+    "    \n",
+    "    def plot_sound(self, t_lim = 0.02):\n",
+    "        time_pts = np.linspace(0, t_lim, t_lim*self.sample_rate)\n",
+    "        #sound_pts = comb(...)\n",
+    "        if blah:\n",
+    "            print 'blah'\n",
+    "        else:\n",
+    "            print 'ta'\n",
+    "    \n",
+    "\n",
+    "#ian = Tone()\n",
+    "#ian.get_tone(440, 2)\n",
     "        \n",
     "        \n",
     "\n"
