--- a/HW_07_draft.ipynb
+++ b/HW_07_draft.ipynb
@@ -11,7 +11,9 @@
     "'''\n",
     "FOURIER DESCRIPTOR\n",
     "\n",
-    "Hello Zachary... \n",
+    "Hello Zachary...so I didn't finish the code. The functions all function propperly but\n",
+    "as of now argparse is not functioning propperly and I am figuring out how to plot all \n",
+    "the numbers correctly. I hope this helps.\n",
     "\n",
     "By Jacob Baca\n",
     "Partner: Terry Tran\n",
@@ -108,7 +110,40 @@
     "    return fd_mag, x_rec, y_rec\n",
     "\n",
     "def recover_shape(Z):\n",
-    "def size_norm(Z):\n"
+    "    z_rec = np.fft.ifft(Z)\n",
+    "    x_rec = z_rec.real\n",
+    "    y_rec = z_rec.imag\n",
+    "    \n",
+    "    return x_rec, y_rec\n",
+    "\n",
+    "def size_norm(Z):\n",
+    "    shutup =  Z/np.sqrt( np.abs(Z[1])*np.abs(Z[-1]) )\n",
+    "    return shutup\n",
+    "\n",
+    "x1, y1 = extract_shape('number1.png', blowup = 1., plot_img = True, plot_contour = True, #plot_contour_pts = True)\n",
+    "Z = FD(x1, y1, plot_FD = False, y_lim = None)\n",
+    "filtered_z = filt_FD(Z, order = 10, no_zeroth = True) #N_KEEP LIST HERE AS 10 IS THE ARGPARSE ORDER\n",
+    "fd_mag, x1_rec, y1_rec = get_FD_abs(x1, y1, order = 10, norm = False, no_zeroth = False)\n",
+    "x1_rec, y1_rec = recover_shape(Z)\n",
+    "normalization = size_norm(Z)\n",
+    "\n",
+    "# x2, y2 = extract_shape('number2.png', blowup = 1., plot_img = True, plot_contour = True, #plot_contour_pts = True)\n",
+    "# Z = FD(x2, y2, plot_FD = False, y_lim = None)\n",
+    "# filtered_z = filt_FD(Z, order = 10, no_zeroth = True) #N_KEEP LIST HERE AS 10 IS THE ARGPARSE ORDER\n",
+    "# fd_mag, x2_rec, y2_rec = get_FD_abs(x2, y2, order = 10, norm = False, no_zeroth = False)\n",
+    "# x2_rec, y2_rec = recover_shape(Z)\n",
+    "# normalization = size_norm(Z)\n",
+    "\n",
+    "# x6, y6 = extract_shape('number6.png', blowup = 1., plot_img = True, plot_contour = True, plot_contour_pts = True)\n",
+    "# Z = FD(x6, y6, plot_FD = False, y_lim = None)\n",
+    "# filtered_z = filt_FD(Z, order = 10, no_zeroth = True) #N_KEEP LIST HERE AS 10 IS THE ARGPARSE ORDER\n",
+    "# fd_mag, x6_rec, y6_rec = get_FD_abs(x6, y6, order = 10, norm = False, no_zeroth = False)\n",
+    "# x6_rec, y6_rec = recover_shape(Z)\n",
+    "# normalization = size_norm(Z)\n",
+    "                       \n",
+    "#parser = argparse.ArgumentParser(description = 'keep this many terms: '\n",
+    "#parser.add_argument('order', metavar='O', type=int, nargs='+',help='an integer for order')\n",
+    "#args = parser.parse_args('order', '9')"
    ]
   }
  ],
